FIx Uninteractive buttons, Phone Number not saving in database

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,7 +9,6 @@
   font-display: swap;
 }
 
-
 @import 'tailwindcss';
 
 @import 'tw-animate-css';
@@ -48,6 +47,8 @@ body {
   /* Safe area insets for notched devices */
   padding-top: env(safe-area-inset-top);
   padding-bottom: env(safe-area-inset-bottom);
+  padding-left: env(safe-area-inset-left);
+  padding-right: env(safe-area-inset-right);
 }
 
 @media (min-width: 441px) {
