--- a/android/app/src/main/res/xml/network_security_config.xml
+++ b/android/app/src/main/res/xml/network_security_config.xml
@@ -12,6 +12,7 @@
         <domain includeSubdomains="true">localhost</domain>
         <domain includeSubdomains="true">10.0.2.2</domain>
         <domain includeSubdomains="true">127.0.0.1</domain>
+        <domain includeSubdomains="true">192.168.1.47</domain>
     </domain-config>
 
     <!-- ⚠️ DEV ONLY: Trust user certificates in debug builds (allows self-signed SSL certs) -->
