--- a/android/app/src/main/res/xml/network_security_config.xml
+++ b/android/app/src/main/res/xml/network_security_config.xml
@@ -13,6 +13,7 @@
         <domain includeSubdomains="true">10.0.2.2</domain>
         <domain includeSubdomains="true">127.0.0.1</domain>
         <domain includeSubdomains="true">192.168.1.211</domain>
+        <domain includeSubdomains="true">172.20.10.6</domain>
     </domain-config>
 
     <!-- ⚠️ DEV ONLY: Trust user certificates in debug builds (allows self-signed SSL certs) -->
